2012-01-27  Richard Henderson  <rth@redhat.com>

	* include/bits/atomic_base.h (__atomic_flag_base): Define _M_i
	based on the value of __GCC_ATOMIC_TEST_AND_SET_TRUEVAL.
	(ATOMIC_FLAG_INIT): Initialize with 0, not false.
	(atomic_flag::atomic_flag): Use __GCC_ATOMIC_TEST_AND_SET_TRUEVAL.

2012-01-26  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/51985
	* src/c++98/Makefile.am (libc__98_la_SOURCES,
	libc__98convenience_la_SOURCES): Remove $(inst_sources).
	* src/c++98/Makefile.in: Regenerated.

2012-01-25  Richard Sandiford  <rdsandiford@googlemail.com>

	* testsuite/20_util/system_clock/1.cc: Add dg-require-time.
	* testsuite/22_locale/time_put/put/wchar_t/12439_1.cc: Likewise.
	* testsuite/22_locale/time_put/put/wchar_t/12439_2.cc: Likewise.
	* testsuite/22_locale/time_put/put/wchar_t/12439_3.cc: Likewise.
	* testsuite/27_io/basic_istream/readsome/wchar_t/6746-2.cc: Add
	dg-require-fileio.
	* testsuite/27_io/basic_istream/seekg/wchar_t/fstream.cc: Likewise.
	* testsuite/27_io/basic_istream/tellg/wchar_t/1.cc: Likewise.
	* testsuite/27_io/basic_istream/tellg/wchar_t/fstream.cc: Likewise.
	* testsuite/27_io/basic_ostream/seekp/wchar_t/2346-fstream.cc:
	Likewise.
	* testsuite/27_io/basic_ostream/tellp/wchar_t/1.cc: Likewise.

2012-01-25  Matthias Klose  <doko@ubuntu.com>

	* testsuite/30_threads/condition_variable_any/requirements: Remove
	empty directory.

2012-01-23  Benjamin Kosnik  <bkoz@redhat.com>

	* src/Makefile.am (libstdc++convenience.la): Correct stamp rule, copy.
	* src/Makefile.in: Regenerate.

2012-01-23  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/49829
	Add libc++98convenience.la, libc++11convenience.la.
	* src/c++98: New directory.
	* src/c++11: New directory.
	* acinclude.m4: (GLIBCXX_CONFIGURE): Add src-c++98, src-c++11.
	* configure: Regenerated.
	* Makefile.am (hosted_source): Add src-c++98, src-c++11 to SUBDIRS.
	* Makefile.in: Regenerate.
	* libsupc++/Makefile.am (AM_CXXFLAGS): USe XTEMPLATE_FLAGS for
	-fno-implicit-templates.